# pikuma_graphics

./: .gitignore  CMakeLists.txt  main.cpp
.cache/clangd/index/: SDL.c.218E8AE18A6C26DB.idx  SDL.c.E172C430B31D15FC.idx  SDL_RLEaccel.c.18E3DFD82B43DA24.idx  SDL_RLEaccel.c.76CB1EF9CF551D3E.idx  SDL_RLEaccel_c.h.1C9E423AC94D85FF.idx  SDL_RLEaccel_c.h.BA13C25E8944667E.idx  SDL_alsa_audio.c.8AD1304EA545CCD7.idx  SDL_alsa_audio.c.E6E67345DB1D3EE2.idx  SDL_alsa_audio.h.5F5799B73256EF98.idx  SDL_alsa_audio.h.B1A32BE7D53BE1C6.idx  SDL_assert.c.6E93153FD0A5CB0D.idx  SDL_assert.c.E25B5F67CBB7152F.idx  SDL_assert_c.h.111059A08D380FF5.idx  SDL_assert_c.h.B2F1A326CFADDDF6.idx  SDL_atomic.c.02E9F0346E6BAD36.idx  SDL_atomic.c.0B5F58E359D18EA6.idx  SDL_audio.c.0AB655C58ADA61E4.idx  SDL_audio.c.88A0248ED30939D5.idx  SDL_audio_c.h.4019C75DAE2ACF83.idx  SDL_audio_c.h.8E3ADAB0643007A4.idx  SDL_audio_channel_converters.h.0CBCDB24A259A479.idx  SDL_audio_channel_converters.h.39BBF1806A327573.idx  SDL_audio_resampler_filter.h.415EAC78BEBC6901.idx  SDL_audio_resampler_filter.h.A6EEE4A166C7AC6B.idx  SDL_audiocvt.c.49E6DB1134186471.idx  SDL_audiocvt.c.F2357D70D53B561D.idx  SDL_audiodev.c.97C49BCB6A361232.idx  SDL_audiodev.c.A76963D41A67BCC0.idx  (+846 more)
assets/: cube.blend  plane.blend
modules/: CMakeLists.txt
modules/include/: example.h  example1.h  example2.h  example3.h  example4.h  example5.h  example6.h  example7.h  mesh.h  sdlwindow.h  test.h  triangle.h  util.h
modules/src/: example.cpp  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp  example7.cpp  mesh.cpp  sdlwindow.cpp  triangle.cpp  util.cpp
